testsuite/tests/module/mod151.stderr

mod151.hs:2:20: error: [GHC-87543]
    Ambiguous occurrence ‘id’.
    It could refer to
       either ‘Prelude.id’,
              imported from ‘Prelude’ at mod151.hs:2:8
              (and originally defined in ‘base-4.18.0.0:GHC.Base.FunOps’),
           or ‘M.id’, defined at mod151.hs:2:30.
